idk add rai bang but fix schema and add reportcontroller but not all
